--- a/src/index.css
+++ b/src/index.css
@@ -97,3 +97,12 @@
     background-position: left 100% bottom 0;
   }
 }
+.ndfHFb-c4YZDc-Wrql6b-SmKAyb{
+  display: none!important;
+}
+.ndfHFb-c4YZDc-GSQQnc-LgbsSe.ndfHFb-c4YZDc-to915-LgbsSe.VIpgJd-TzA9Ye-eEGnhe.ndfHFb-c4YZDc-LgbsSe{
+  display: none!important;
+}
+.ndfHFb-c4YZDc-i5oIFb.ndfHFb-c4YZDc-e1YmVc .ndfHFb-c4YZDc-Wrql6b{
+  background: transparent!important;
+}
